# PyxelGrid

./: .gitignore  README.md  pyproject.toml  pyxelgrid.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: pyxelgrid.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  pyxelgrid.html
docs/_build/html/_sources/source/: pyxelgrid.rst.txt
docs/_build/html/source/: pyxelgrid.html
